2010-02-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* OpenGL fixes: Invisibility draws sprites translucently, outlines are now
	  drawn correctly (poison, damage, etc), screenshots and save screenshots
	  work, crystal balls work.

2010-02-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/pngio.*: Added function to save 32-bit RGBA png file.
	* mapedit/u7shp.c: Do not prompt for palette if running non-interactively.
	* All else: Added a Gnome thumbnailer for SHP files. It can probably be
	  modified to work on Thunar/Xfce too, but I have no idea about KDE.
	  No comments on Windows, though. It is off by default.

2010-02-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ucc: Some additional escape character sequences have been added, as well
	  as some code to warn about unknown sequences. Also, ucc was not closing
	  files it opened, which in some cases causes problem compiling usecode if
	  there are too many includes (e.g., on Windows).

2010-01-08	Tristan Tarrant <nadir@users.sourceforge.net>
	* Disable smooth scrolling in default install

2010-01-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed Exult Menu to be consistent with Tristan's commit. It is also more
	  dynamic now, adjusting to the screen size.
	* Eliminated various #ifdef for Zaurus given that they were specifically
	  added for the different-sized Exult-menu.

2010-01-08	Tristan Tarrant <nadir@users.sourceforge.net>
	* First commit of 2010 and it isn't by Marzo !!!
	* Main screen is now at 320x200 to be consistent with the default
	  game resolution

2009-11-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed double-delete bug in midi driver backend for MT32 midi conversion.

2009-09-13 Dominik Reichardt <dominus@users.sourceforge.net>
	* Fixed numbering in Documentation and FAQ
	* docs/xml/makefile: added simple duplicating rule for README and FAQ
	
2009-08-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs #2834246, #2833614 and #2830990.